# wake

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  app_fixes.patch  architecture.md  architecture_uml.md  author.txt  build.rs  contexxt.txt  dummy_script.sh  fix_nested_functions.sh  fix_render_signatures.sh  future_steps.md  guide.html  index.html  introduction.md  markdown-page.html  option2.html  out.txt  package-lock.json  package.json  publishingsteps.md  sam.txt  sam2.txt  search-index.json  search.html  sitemap.xml  styles.css  template-feature-design.md  test_suite.md  wakename.txt
.cargo/: config.toml
.github/workflows/: build.yml  deploy.yml  gh-pages.yml  release.yml
assets/css/: styles.040e3488.css
assets/js/: 0058b4c6.95f9441c.js  10685b73.4b5ff075.js  10685b73.7dca5b5e.js  138e0e15.4b16c47e.js  16158049.1eeeeef9.js  16158049.62476a53.js  17896441.c8e6a8bd.js  189.4f170c41.js  1a081c65.5a09067a.js  1a081c65.be54df63.js  1a4e3797.d83a52eb.js  1df93b7f.a4f810e7.js  1f391b9e.d8adec69.js  237.376e30af.js  242d11c4.7cee31a7.js  242d11c4.df9ac51d.js  393be207.24bd9514.js  393be207.ed3df95c.js  44628c80.83c4b8d9.js  44628c80.96761a23.js  489.716b51e8.js  540.990cd2d6.js  5e95c892.f7297696.js  69c9b381.43635f33.js  69c9b381.6910cd6d.js  71b4d217.48ea20d8.js  71b4d217.4a5a2501.js  741.94aadd3a.js  809.3313725b.js  809.4caa3281.js  9b00612c.5c2c2297.js  9b00612c.6d83ac64.js  9c6e6fad.477a2dac.js  9c6e6fad.ae5dfb43.js  a7456010.6f091c0e.js  a7bd4aaa.7c9b2b5d.js  a94703ab.d94b3dc5.js  aba21aa0.362044d9.js  ad44fc1f.6f75602a.js  ad44fc1f.da5d7b02.js  (+11 more)
dev/: README.md  muli-lang-pod.yaml
dev/manifests/: 01-nginx.yaml  02-database.yaml  03-monitoring.yaml  04-log-generator.yaml
dev/perf/: 00-namespace-config.yaml  01-generators-1-2.yaml  02-generators-3-5.yaml  03-generators-6-8.yaml  04-generators-9-10.yaml  README.md  benchmark.sh  cleanup-perf.sh  perf-analysis.sh  setup-perf.sh  timebox.py  visualize_performance.py
dev/perf/benchmark_results/: benchmark_20250615_184858.csv  benchmark_20250615_185726.csv  (+5 more)
dev/scripts/: cleanup.sh  setup.sh
docs/: intro.html  kernel-optimization-guide.md  kernel-optimization-quick-reference.md  monitor-feature-design.md  monitor-implementation-design.md  scripts-feature.md  template-system.md  web-view-feature-design.md
docs-ui/: DEPLOYMENT.md  GOOGLE_ANALYTICS_SETUP.md  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-ui/docs/: intro.mdx
docs/features/: advanced-patterns.html  command-history.html  interactive-ui.html  kubernetes-context.html  monitor.html  script-execution.html  template-system.html  web-view.html
docs/guides/: cli-reference.html  configuration.html  installation.html
docs/reference/: external-links.html
flow_details/: before_after_web_flow.puml  complete_flow.puml  component_details.puml  template_execution_flow.puml  template_ui_architecture.puml  ui_revamp.md  web_view_flow.puml
resources/: fix_styles.txt  guide.html  index.html  index.html.backup  styles.css
src/: lib.rs  main.rs  update_manager.rs
src/cli/: args.rs  mod.rs
src/config/: mod.rs
src/filtering/: mod.rs
src/guide/: guide.html  mod.rs  webview.rs
src/k8s/: client.rs  logs.rs  metrics.rs  mod.rs  pod.rs  resource.rs  selector.rs
src/kernel/: linux.rs  macos.rs  mod.rs
src/logging/: mod.rs  wake_logger.rs
src/metrics/: collector.rs  mod.rs  timeseries.rs
src/output/: factory.rs  formatter.rs  mod.rs  terminal.rs  web.rs
src/scripts/: editor_ui.rs  executor.rs  executor_ui.rs  list_ui.rs  manager.rs  mod.rs  registry.rs  selector_ui.rs
src/search/: mod.rs  static_commands.json
src/templates/: README.md  builtin.rs  executor.rs  mod.rs  parser.rs  registry.rs
src/ui/: app.rs  config_ui.rs  display.rs  filter_manager.rs  input.rs  mod.rs  monitor.rs  monitor_ui.rs  script_args_ui.rs  script_editor_ui.rs  script_exec_ui.rs  script_output_dialog.rs  script_suggest_ui.rs  template_ui.rs
tests/: mod.rs  test_utils.rs
tests/common/: mod.rs
tests/integration/: app_test.rs  edge_cases_test.rs  filtering_test.rs  mod.rs  performance_test.rs
tests/unit/: mod.rs
wake_script_output_20251203_025112/: merged_output.txt
wake_script_output_20251203_234552/: merged_output.txt
wake_script_output_20251204_202619/: merged_output.txt
(+58 files in other folders)
