[package]
name = "wake"
version = "0.1.0"
edition = "2024"

# Add library target configuration
[lib]
name = "wake"
path = "src/lib.rs"

[dependencies]
# Kubernetes client
kube = { version = "0.87.1", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }

# HTTP client
http = "0.2.12"

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.30"

# Error handling
anyhow = "1.0.79"
thiserror = "1.0.56"

# CLI interface
clap = { version = "4.4.11", features = ["derive"] }

# Logging and output
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
colored = "2.0.4"
regex = "1.10.2"
atty = "0.2.14"

# Serialization/deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.30"

# Terminal UI
crossterm = "0.27.0"

# Utilities
once_cell = "1.18.0"
chrono = "0.4.35"
async-trait = "0.1.77"

[dev-dependencies]
mockall = "0.12.1"
async-trait = "0.1.77"
