[package]
name = "wake"
version = "0.7.9"
edition = "2024"

# Add library target configuration
[lib]
name = "wake"
path = "src/lib.rs"

# Add binary target configuration
[[bin]]
name = "wake"
path = "src/main.rs"

[dependencies]
# Kubernetes client - using openssl-tls to avoid ring dependency
kube = { version = "0.87.1", features = ["runtime", "derive", "ws", "openssl-tls", "client", "config"], default-features = false }
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }

# HTTP client
http = "0.2.12"

# Add OpenSSL for TLS operations in
# Async runtime
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
futures = "0.3.30"

# Error handling
anyhow = "1.0.79"
thiserror = "1.0.56"

# CLI interface
clap = { version = "4.4.11", features = ["derive"] }

# Logging and output
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
colored = "2.0.4"
regex = "1.10.2"
atty = "0.2.14"

# Serialization/deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.30"
toml = "0.8.8"

# Configuration directories
directories = "5.0.1"

# Terminal UI
crossterm = "0.27.0"
ratatui = "0.26.0"
unicode-width = "0.1.11"

# Clipboard functionality
arboard = "3.5.0"

# Utilities
once_cell = "1.18.0"
chrono = "0.4.35"
async-trait = "0.1.77"
threadpool = "1.8.1"
num_cpus = "1.16.0"
dirs = "5.0.1"
fastrand = "2.0.1"
uuid = { version = "1.8.0", features = ["v4"] }
glob = "0.3.1"

# Kernel-level optimizations
libc = "0.2.155"
comfy-table = "7.1.4"

# Optional io_uring support for Linux (kernel 5.1+)
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.6.4", optional = true }

# Archiving output files
tar = "0.4"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
io_uring = ["io-uring"]

[dev-dependencies]
mockall = "0.12.1"
async-trait = "0.1.77"
tempfile = "3.10"
